--- a/Dockerfile-main
+++ b/Dockerfile-main
@@ -1,16 +1,18 @@
 FROM alpine:latest
 
 ENV CATALINA_HOME /usr/local/tomcat
+ENV TOMCAT_VERSION 9.0.50
+ENV TOMCAT_URL https://archive.apache.org/dist/tomcat/tomcat-9/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz
 
 RUN apk update \
     && apk add openjdk8 curl \
     && rm -rf /var/cache/apk/*
 
-RUN mkdir -p /usr/local/tomcat \
-    && curl -SL https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.50/bin/apache-tomcat-9.0.50.tar.gz | tar -xz -C /usr/local/tomcat --strip-components=1 \
-    && tar -zxvf apache-tomcat-9.0.50.tar.gz \
-    && mv apache-tomcat-9.0.50 ${CATALINA_HOME} \
-    && rm apache-tomcat-9.0.50.tar.gz
+RUN wget ${TOMCAT_URL} -O /tmp/tomcat.tar.gz \
+    && tar -zxvf /tmp/tomcat.tar.gz -C \
+    &&  mv apache-tomcat-9.0.50 ${CATALINA_HOME} \
+    &&  rm apache-tomcat-9.0.50.tar.gz
+
 
 COPY tomcat-users.xml ${CATALINA_HOME}/conf/tomcat-users.xml
 COPY context.xml ${CATALINA_HOME}/webapps/manager/META-INF/context.xml
