--- a/Dockerfile-main
+++ b/Dockerfile-main
@@ -4,13 +4,13 @@ ENV CATALINA_HOME /usr/local/tomcat
 ENV TOMCAT_VERSION 9.0.59
 
 RUN apk update \
-    && apk add openjdk8 curl \
+    && apk add openjdk8 curl wget \
     && rm -rf /var/cache/apk/*
 
-RUN curl -O https://downloads.apache.org/tomcat/tomcat-9/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
-    tar -zxvf apache-tomcat-${TOMCAT_VERSION}.tar.gz -C /opt && \
-    mv /opt/apache-tomcat-${TOMCAT_VERSION} ${CATALINA_HOME} && \
-    rm apache-tomcat-${TOMCAT_VERSION}.tar.gz
+RUN wget https://dlcdn.apache.org/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz && \
+    tar -zxvf apache-tomcat-$10.0.20.tar.gz -C /opt && \
+    mv /opt/apache-tomcat-$10.0.20 ${CATALINA_HOME} && \
+    rm apache-tomcat-$10.0.20.tar.gz
 
 COPY tomcat-users.xml ${CATALINA_HOME}/conf/tomcat-users.xml
 COPY context.xml ${CATALINA_HOME}/webapps/manager/META-INF/context.xml
