--- a/Dockerfile-main
+++ b/Dockerfile-main
@@ -1,26 +1,19 @@
 FROM alpine:latest
+RUN \
+    apk add --no-cache \
+    apache2-proxy \
+    apache2-ssl \
+    apache2-utils \
+    curl \
+    git \
+    logrotate \
+    openssl
+WORKDIR /var/www/localhost/htdocs
 
-ENV CATALINA_HOME /usr/local/tomcat
-ENV TOMCAT_VERSION 9.0.59
+COPY index.html /var/www/localhost/htdocs
+COPY index.css  /var/www/localhost/htdocs
+COPY index.js /var/www/localhost/htdocs
+COPY media/ /var/www/localhost/htdocs
+EXPOSE 80
+CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
 
-RUN apk update \
-    && apk add openjdk8 curl wget \
-    && rm -rf /var/cache/apk/*
-
-RUN curl -O apache-tomcat-9.8.83.tar.gz https://dlcdn.apache.org/tomcat/tomcat-10/v9.8.83/bin/apache-tomcat-9.8.83.tar.gz && \
-    tar -zxvf apache-tomcat-9.8.83.tar.gz -C /opt && \
-    mv /opt/apache-tomcat-9.8.83 ${CATALINA_HOME} && \
-    rm apache-tomcat-10.0.20.tar.gz
-
-COPY tomcat-users.xml ${CATALINA_HOME}/conf/tomcat-users.xml
-COPY context.xml ${CATALINA_HOME}/webapps/manager/META-INF/context.xml
-COPY context.xml ${CATALINA_HOME}/webapps/host-manager/META-INF/context.xml
-
-RUN mkdir ${CATALINA_HOME}/webapps/html-files
-COPY index.html ${CATALINA_HOME}/webapps/html-files/
-COPY index.css ${CATALINA_HOME}/webapps/html-files/
-COPY index.js ${CATALINA_HOME}/webapps/html-files/
-COPY media/ ${CATALINA_HOME}/webapps/html-files/
-
-EXPOSE 8080
-CMD ["sh", "-c", "${CATALINA_HOME}/bin/catalina.sh run"]
