--- a/service.yml
+++ b/service.yml
@@ -1,12 +1,12 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: nodeapp
+  name: my-app-service
 spec:
   selector:
-    app: nodeapp
+    app: my-app
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
-  type: LoadBalancer  
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
